--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <title>Welcome to my github!</title>
   </head>
   <body>
-    <p>This is an example paragraph. Anything in the <strong>body</strong> tag will appear on the page, just like this <strong>p</strong> tag and its contents.</p>
-    <p>It is interesting to use github.</p>
+    <p1>This is an example paragraph. Anything in the <strong>body</strong> tag will appear on the page, just like this <strong>p</strong> tag and its contents.</p1>
+    <p2>It is interesting to use github.</p2>
   </body>
 </html>
